[gd_scene load_steps=6 format=2]

[ext_resource path="res://World/SignPost.png" type="Texture" id=1]
[ext_resource path="res://World/SignPost.gd" type="Script" id=2]
[ext_resource path="res://Dialogue/DialogueLoader.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.0
height = 10.0

[node name="SignPost" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 2 )
dialogue_path = "res://Dialogue/testDialogue.json"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="ActivationZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionZone" type="CollisionShape2D" parent="ActivationZone"]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="DialogueLoader" parent="." instance=ExtResource( 3 )]
[connection signal="body_entered" from="ActivationZone" to="." method="_on_ActivationZone_body_entered"]
[connection signal="body_exited" from="ActivationZone" to="." method="_on_ActivationZone_body_exited"]

[editable path="DialogueLoader"]
